@@ -29,8 +29,7 @@ getExperimentCrossAssociation(x, ...)
   MARGIN = 1,
   method = c("spearman", "categorical", "kendall", "pearson"),
   mode = "table",
-  p_adj_method = c("fdr", "BH", "bonferroni", "BY", "hochberg", "holm", "hommel",
-    "none"),
+  p_adj_method = c("fdr", "BH", "bonferroni", "BY", "hochberg", "holm", "hommel", "none"),
   p_adj_threshold = NULL,
   cor_threshold = NULL,
   sort = FALSE,
